   4. New Account stats for Bonus char per account, chars online, char creation points, common skill limits
   5. New Property: Prop_ItemBinder, for binding items to char, acct, clan. How did that get missed all these years?
   6. New version of Siplet (the web client).  Now uses WebSockets for streaming joy.
   7. New disease: Sleepwalking.  Very rare, but can be caught through extreme fatigue.
# Build 5.9.0 Released 12/20/2015
   1. Web Server upgraded to 2.3
   2. coffeemud.ini entry FLEE has new (blank) option to basically disable fleeing and break a bunch of skills.
   3. Scriptable: When reading script vars, scopes local->quest bound->global will be checked in order.
   4. New DEBUG flag -- INPUT, for debugging ALL user input in string form
   5. New Property: Prop_RestrictSkills - for limiting skill use by location, or as a curse affect.
   6. New package application: VFShell, a command line tool for access full coffeemud file system without the mud.
   7. Basic MCP support added to CoffeeMud.  ZMUD Editor package supported. mcppkgs directory for others.
   8. New DISABLE flag: HYGEINE, for disabling the natural hygenic system -- the magic version left intact.
   9. New support for a permanent ip blocking system.  See BLACKLISTFILE in coffeemud.ini
  10. Ability-crimes in the legal system now supports skill types and skill domains.  See laws.ini.
  11. Scriptable EXECMSG/CNCLMSG now supports specified major/minor codes.  See Scriptable Guide.
  12. STAT command now supports LEVELTIMES to view when a player leveled up from the command line.
  13. Tweek to prompts for SimpleMU, plus some prompt behavior settings.  See coffeemud.ini PROMPTBEHAVIOR.
  14. Can now temp add/remove misc DISABLE flags from Control Panel "Switches" screen.
  15. PUT can now target non-container items. Mentioned because such a low-lvl change requires watching.
  16. Internal/Scripting -- the COMMANDFAIL message type implemented for most basic player commands.