@@ -33,14 +33,17 @@ normal users.
 
 TICKTOCK=\
 Command : TickTock\n\r\
-Usage   : [NUM HOURS]/CLANTICK/[THREAD NAME]\n\r\
+Usage   : [NUM HOURS]/CLANTICK/ACHIEVEMENTS/[THREAD NAME]\n\r\
 Example : ticktock 10\n\r\
 Example : ticktock -4\n\r\
 Example : ticktock CLANTICK\n\r\
+Example : ticktock ACHIEVEMENTS\n\r\
 Example : ticktock THPLAYERS0\n\r\
 Advance the time by specified number of hours, or cause one of the \
 specified maintenance threads to immediately go through a cycle.  \
-Use LIST REPORTS to get a list of maintenance threads.
+Use LIST REPORTS to get a list of maintenance threads.  The CLANTICK \
+argument forces the timed clan maintenance, and ACHIEVEMENTS forces \
+the timed player achievement checks.
 
 ATOPICS=\
 Command : ATOPICS\n\r\
